; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/spacetime/keymaps/kyleterry/extr_keymap.c_td_media.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/spacetime/keymaps/kyleterry/extr_keymap.c_td_media.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@KC_MPLY = common dso_local global i32 0, align 4
@KC_MUTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @td_media(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %18 [
    i32 1, label %8
    i32 2, label %13
  ]

8:                                                ; preds = %2
  %9 = load i32, i32* @KC_MPLY, align 4
  %10 = call i32 @tap_code16(i32 %9)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %12 = call i32 @reset_tap_dance(%struct.TYPE_4__* %11)
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @KC_MUTE, align 4
  %15 = call i32 @tap_code16(i32 %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = call i32 @reset_tap_dance(%struct.TYPE_4__* %16)
  br label %18

18:                                               ; preds = %2, %13, %8
  ret void
}

declare dso_local i32 @tap_code16(i32) #1

declare dso_local i32 @reset_tap_dance(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
